# Elevator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  elevator.c
.github/workflows/: ccpp.yml
src/: elevator.c  elevator.h  main.c  person.c  person.h
